--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@walletconnect/core": "^2.12.2",
     "@walletconnect/sign-client": "^2.12.2",
     "@walletconnect/universal-provider": "^2.12.2",
+    "@web3modal/wagmi": "^4.2.1",
     "dayjs": "^1.11.10",
     "did-session": "^3.1.0",
     "dids": "^5.0.2",
