--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@4everland/upload-pin": "^1.1.1",
-    "@aws-sdk/client-s3": "^3.575.0",
-    "@ceramicnetwork/http-client": "^5.10.0",
-    "@ceramicnetwork/observability": "^1.5.4",
-    "@ceramicnetwork/streamid": "^5.0.0",
-    "@composedb/client": "^0.7.1",
-    "@composedb/devtools": "^0.7.1",
-    "@composedb/server": "^0.7.1",
-    "@composedb/types": "^0.7.1",
+    "@ceramicnetwork/cli": "^5.2.0",
+    "@ceramicnetwork/common": "^5.1.0",
+    "@ceramicnetwork/http-client": "^5.2.0",
+    "@composedb/cli": "^0.7.0",
+    "@composedb/client": "^0.7.0",
+    "@composedb/devtools": "^0.7.0",
+    "@composedb/devtools-node": "^0.7.0",
+    "@didtools/cacao": "2.0.0",
     "@didtools/pkh-ethereum": "^0.5.0",
     "@didtools/pkh-solana": "^0.2.0",
     "@editorjs/checklist": "^1.6.0",
@@ -52,8 +51,8 @@
     "@walletconnect/universal-provider": "^2.12.2",
     "@web3modal/wagmi": "^4.2.1",
     "dayjs": "^1.11.10",
-    "did-session": "^3.1.0",
-    "dids": "^5.0.2",
+    "did-session": "^2.1.1",
+    "dids": "^3.2.0",
     "encoding": "^0.1.13",
     "ethers": "^6.12.1",
     "jsonwebtoken": "^9.0.2",
