--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@didtools/pkh-ethereum": "^0.5.0",
     "@didtools/pkh-solana": "^0.2.0",
     "@editorjs/checklist": "^1.6.0",
+    "uint8arrays": "^5.0.1",
     "@editorjs/delimiter": "^1.4.0",
     "@editorjs/editorjs": "^2.29.1",
     "@editorjs/embed": "^2.7.1",
